--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,14 +19,13 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
-        android:name=".App"
         android:allowBackup="true"
+        android:name=".paquetes.Utils.ApplicationCronometro"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ServicioCronometro"></activity>
         <activity
             android:name=".paquetes.Menus.Perfiles.PerfilAdmin"
             android:parentActivityName=".paquetes.Menus.MenuAdmin" />
@@ -39,7 +38,7 @@
             android:permission="android.permission.BIND_JOB_SERVICE" />
 
         <service
-            android:name=".ImplServicioCronometro"
+            android:name=".paquetes.Servicios.ForegroundServiceCronometro"
             android:enabled="true"
             android:exported="true" />
 
