--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'com.android.application'
 apply plugin: 'com.google.firebase.crashlytics'
+apply plugin: 'com.google.firebase.firebase-perf'
 
 android {
     compileSdkVersion 29
@@ -52,6 +53,7 @@ dependencies {
     implementation 'com.airbnb.android:lottie:3.4.0'
     implementation 'com.github.florent37:shapeofview:1.3.2'
     implementation 'com.github.GrenderG:Toasty:1.4.2'
+    implementation 'com.google.firebase:firebase-perf:19.0.8'
     implementation "androidx.recyclerview:recyclerview-selection:1.1.0-rc01"
     implementation 'com.firebase:geofire-android:2.2.0'
     implementation "androidx.cardview:cardview:1.0.0"
