--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,10 +30,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".paquetes.Actividades.Pedidos.SolicitarProducto"
-            android:parentActivityName=".paquetes.Menus.MenuAdmin" ></activity>
+        <activity android:name=".paquetes.Actividades.Pedidos.ListaSolicitudProductos"></activity>
         <activity
-            android:name=".paquetes.Reportes.GraficoGanancias"/>
+            android:name=".paquetes.Actividades.Pedidos.SolicitarProducto"
+            android:parentActivityName=".paquetes.Menus.MenuAdmin" />
+        <activity android:name=".paquetes.Reportes.GraficoGanancias" />
         <activity
             android:name=".paquetes.Actividades.Pedidos.ListaSolicitudProveedor"
             android:parentActivityName=".paquetes.Menus.MenuAdmin"
