--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,7 +30,20 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".paquetes.Actividades.Pedidos.ListaSolicitudProductos"></activity>
+        <activity android:name=".paquetes.Productos.Solicitud.DetalleSolicitudDeProductoParaProveedor"
+            android:screenOrientation="landscape"></activity>
+        <activity
+            android:name=".paquetes.Productos.Solicitud.ListaSolicitudProductoParaProveedor"
+            android:parentActivityName=".paquetes.Productos.Solicitud.MenuListaDeSolicitudes"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".paquetes.Productos.Solicitud.MenuListaDeSolicitudes"
+            android:parentActivityName=".paquetes.Menus.MenuProveedor"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".paquetes.Actividades.Pedidos.ListaSolicitudProductos"
+            android:parentActivityName=".paquetes.Menus.MenuAdmin"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".paquetes.Actividades.Pedidos.SolicitarProducto"
             android:parentActivityName=".paquetes.Menus.MenuAdmin" />
