--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
+        <activity
+            android:name=".paquetes.Actividades.Pedidos.DetalleSolicitudProveedor"
+            android:screenOrientation="portrait" />
+
         <activity android:name=".paquetes.Productos.Solicitud.DetalleSolicitudDeProductoParaProveedor"
             android:screenOrientation="landscape"></activity>
         <activity
