--- a/local.properties
+++ b/local.properties
@@ -1,9 +1,8 @@
-
 ## This file must *NOT* be checked into Version Control Systems,
 # as it contains information specific to your local configuration.
 #
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Aug 24 11:38:34 COT 2020
-sdk.dir=C\:\\Users\\Danny\\AppData\\Local\\Android\\Sdk
+#Fri Dec 18 17:02:57 COT 2020
+sdk.dir=C\:\\Users\\Usuario\\AppData\\Local\\Android\\Sdk
