--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,18 +30,17 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
+        <activity android:name=".paquetes.Menus.Perfiles.Perfilproveedoraukde"></activity>
         <activity
             android:name=".paquetes.Actividades.Pedidos.DetalleSolicitudProveedor"
             android:screenOrientation="portrait" />
-
-        <activity android:name=".paquetes.Menus.Perfiles.PerfilProveedor"
+        <activity
+            android:name=".paquetes.Menus.Perfiles.PerfilProveedor"
             android:parentActivityName=".paquetes.Menus.MenuProveedor"
-            android:screenOrientation="portrait"
-            />
-
-        <activity android:name=".paquetes.Productos.Solicitud.DetalleSolicitudDeProductoParaProveedor"
-            android:screenOrientation="landscape"></activity>
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".paquetes.Productos.Solicitud.DetalleSolicitudDeProductoParaProveedor"
+            android:screenOrientation="landscape" />
         <activity
             android:name=".paquetes.Productos.Solicitud.ListaSolicitudProductoParaProveedor"
             android:parentActivityName=".paquetes.Productos.Solicitud.MenuListaDeSolicitudes"
