--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,9 +30,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".paquetes.Menus.Perfiles.Perfilproveedoraukde"
+        <activity
+            android:name=".paquetes.Menus.Perfiles.Perfilproveedoraukde"
             android:parentActivityName=".paquetes.Menus.MenuProveedor"
-            android:screenOrientation="portrait"/>
+            android:screenOrientation="portrait" />
         <activity
             android:name=".paquetes.Actividades.Pedidos.DetalleSolicitudProveedor"
             android:screenOrientation="portrait" />
